nginx-ingress/ingress-cheddar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: cheddar
spec:
  rules:
  - host: cheddar.127.0.0.1.nip.i
    http:
      paths:
      - backend:
          service:
            name: cheddar
            port:
              number: 80
        path: /cheddaro
        pathType: Exact
status:
  loadBalancer: {}
